@@ -61,3 +61,6 @@ dev.1.0.17.20240606
 
 dev.1.0.18.20240613
 1. Skip conv2d nodes of type NoneType
+
+dev.1.0.19.20240614
+1. Add extracting sub graph function
